增加编码器、TIM14中断1ms时间戳代码

--- a/STM32G030-TinySolder.ioc
+++ b/STM32G030-TinySolder.ioc
@@ -61,13 +61,14 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G030K6Tx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
+NVIC.EXTI4_15_IRQn=true\:2\:0\:true\:true\:true\:1\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:false\:true\:false
-NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true
+NVIC.SysTick_IRQn=true\:3\:0\:true\:false\:false\:false\:true\:false
+NVIC.TIM14_IRQn=true\:3\:0\:true\:true\:true\:2\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=ENC_SW
 PA0.Locked=true
@@ -114,12 +115,8 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=VIN
 PB7.Locked=true
 PB7.Signal=SharedAnalog_PB7
-PC14-OSC32_IN\ (PC14).GPIOParameters=GPIO_Label
-PC14-OSC32_IN\ (PC14).GPIO_Label=ENC_L
 PC14-OSC32_IN\ (PC14).Locked=true
-PC14-OSC32_IN\ (PC14).Signal=GPIO_Input
-PC15-OSC32_OUT\ (PC15).GPIOParameters=GPIO_Label
-PC15-OSC32_OUT\ (PC15).GPIO_Label=ENC_R
+PC14-OSC32_IN\ (PC14).Signal=GPXTI14
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Label
@@ -185,6 +182,8 @@ RCC.SYSCLKFreq_VALUE=16000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.SharedAnalog_PB2.0=GPIO_Analog
@@ -203,8 +202,8 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM14.Period=49
-TIM14.Prescaler=15999
+TIM14.Period=999
+TIM14.Prescaler=15
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,OC1Preload_PWM,OCFastMode_PWM-PWM Generation1 CH1
